tests/ui/fail/frame_mismatch.stderr
error[E0277]: cannot multiply `cardo::SO3<Sensor, Body>` by `cardo::SO3<Body, World>`
  --> tests/ui/fail/frame_mismatch.rs:11:17
   |
11 |     let _r = r1 * r2;
   |                 ^ no implementation for `cardo::SO3<Sensor, Body> * cardo::SO3<Body, World>`
   |
   = help: the trait `Mul<cardo::SO3<Body, World>>` is not implemented for `cardo::SO3<Sensor, Body>`
help: the following other types implement trait `Mul<Rhs>`
  --> src/so3.rs
   |
   | impl_lie_group!(Group = SO3, Tangent = SO3Tangent, AdjMat = Mat3);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | `cardo::SO3<A, B, T>` implements `Mul<SO3Tangent<X, Y, A, T>>`
   | `cardo::SO3<A, B, T>` implements `Mul<cardo::SO3<C, A, T>>`
   | `cardo::SO3<A, B, T>` implements `Mul<cardo::Vector3<A, T>>`
   = note: this error originates in the macro `impl_lie_group` (in Nightly builds, run with -Z macro-backtrace for more info)
